# fastapi_journaling

project/: pyproject.toml
project/project/: __init__.py
